--- a/style.css
+++ b/style.css
@@ -5,12 +5,12 @@
 #calculator {
     background-color: rgb(155, 153, 255);
     max-width: 300px;
-    padding: 80px;
+    padding: 30px 60px;
     margin: 0 auto;
     display: flex;
     justify-content: center;
     align-items: center;
-    border-radius: 8px;
+    border-radius: 10px;
     
 }
 form  {   
